--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,8 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 csharp_new_line_before_open_brace = none
+
+dotnet_style_qualification_for_field = true:warning
+dotnet_style_qualification_for_property = true:warning
+dotnet_style_qualification_for_method = true:warning
+dotnet_style_qualification_for_event = true:warning
