feat(schedule): Initial Implementation

--- a/A1/A1.csproj
+++ b/A1/A1.csproj
@@ -8,4 +8,8 @@
     <SelfContained>true</SelfContained>
     <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.54.0" />
+  </ItemGroup>
 </Project>
