--- a/taskfile.yml
+++ b/taskfile.yml
@@ -13,13 +13,15 @@ tasks:
       - dotnet run --project A1 -- ./courseData.json -o ./schedule.md --degree COIS --credit_count=40 --term_size=5 --log --graph_output ./courseGraph.md --debug {{.CLI_ARGS}}
   format:
     desc: Formats the application
-    cmd: dotnet format 3020.sln
+    cmds: 
+      - dotnet format A1 {{.CLI_ARGS}}
+      - dotnet format A1Tests {{.CLI_ARGS}}
   build:
     desc: Builds the solution
-    cmd: dotnet build 3020.sln
+    cmd: dotnet build A1
   test:
     desc: Runs tests
-    cmd: dotnet test 3020.sln {{.CLI_ARGS}}
+    cmd: dotnet test A1Tests {{.CLI_ARGS}}
   release:
     desc: Builds and runs the application in release mode
     cmds:
