--- a/A1Tests/A1Tests.csproj
+++ b/A1Tests/A1Tests.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>disable</Nullable>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
@@ -20,6 +20,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\A1\A1.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="./data/courseData.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
